fix bug, create 2 editors in demo

--- a/AceGWTDemo/war/AceGWTDemo.html
+++ b/AceGWTDemo/war/AceGWTDemo.html
@@ -31,6 +31,8 @@
 	<!-- Get .js files for any needed ACE modes and themes -->
 	<script src="acegwtdemo/ace/theme-eclipse.js" type="text/javascript" charset="utf-8"></script>
 	<script src="acegwtdemo/ace/mode-java.js" type="text/javascript" charset="utf-8"></script>
+	<script src="acegwtdemo/ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
+	<script src="acegwtdemo/ace/mode-perl.js" type="text/javascript" charset="utf-8"></script>
 
 	<style>
 	/*
