--- a/AceGWTDemo/war/AceGWTDemo.html
+++ b/AceGWTDemo/war/AceGWTDemo.html
@@ -26,6 +26,9 @@
     <!--                                           -->
     <script type="text/javascript" language="javascript" src="acegwtdemo/acegwtdemo.nocache.js"></script>
 
+	<!--  JSON stringify - useful for inspecting javascript objects -->
+	<script type="text/javascript" language="javascript" src="acegwtdemo/json2_min.js"></script>
+
 	<!-- ACE - main .js file -->
 	<script src="acegwtdemo/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 	<!-- Get .js files for any needed ACE modes and themes -->
