upgraded to latest and greatest version of ACE: seems to work
One new detail: when specifying the css position attribute for
the .ace_editor class, need to specify !important to make sure
that it takes effect, regardless of other stylesheets used.

--- a/AceGWTDemo/war/AceGWTDemo.html
+++ b/AceGWTDemo/war/AceGWTDemo.html
@@ -43,7 +43,7 @@
 	 * participate in normal HTML layout.
 	 */
 	.ace_editor {
-		position: relative; 
+		position: relative !important; 
 	}
 	</style>
   </head>
