Project building fixed.

--- a/AceGWTDemo/src/main/webapp/AceGWTDemo.html
+++ b/AceGWTDemo/src/main/webapp/AceGWTDemo.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" language="javascript" src="acegwtdemo/acegwtdemo.nocache.js"></script>
 
 	<!--  JSON stringify - useful for inspecting javascript objects -->
-	<script type="text/javascript" language="javascript" src="acegwtdemo/json2_min.js"></script>
+	<script type="text/javascript" language="javascript" src="js/json2_min.js"></script>
 
 	<!-- ACE - main .js file -->
 	<script src="acegwtdemo/ace/ace.js" type="text/javascript" charset="utf-8"></script>
