--- a/AceGWTDemo/src/main/webapp/AceGWTDemo.html
+++ b/AceGWTDemo/src/main/webapp/AceGWTDemo.html
@@ -24,20 +24,20 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="acegwt-demo/acegwt-demo.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="acegwtdemo/acegwtdemo.nocache.js"></script>
 
 	<!--  JSON stringify - useful for inspecting javascript objects -->
-	<script type="text/javascript" language="javascript" src="acegwt-demo/json2_min.js"></script>
+	<script type="text/javascript" language="javascript" src="acegwtdemo/json2_min.js"></script>
 
 	<!-- ACE - main .js file -->
-	<script src="acegwt-demo/ace/ace.js" type="text/javascript" charset="utf-8"></script>
+	<script src="acegwtdemo/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 	<!-- Get .js files for any needed ACE modes and themes -->
-	<script src="acegwt-demo/ace/theme-eclipse.js" type="text/javascript" charset="utf-8"></script>
-	<script src="acegwt-demo/ace/mode-java.js" type="text/javascript" charset="utf-8"></script>
-	<script src="acegwt-demo/ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
-	<script src="acegwt-demo/ace/mode-perl.js" type="text/javascript" charset="utf-8"></script>
+	<script src="acegwtdemo/ace/theme-eclipse.js" type="text/javascript" charset="utf-8"></script>
+	<script src="acegwtdemo/ace/mode-java.js" type="text/javascript" charset="utf-8"></script>
+	<script src="acegwtdemo/ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
+	<script src="acegwtdemo/ace/mode-perl.js" type="text/javascript" charset="utf-8"></script>
 	<!--  Needed for autocompletion support. -->
-	<script src="acegwt-demo/ace/ext-language_tools.js" type="text/javascript" charset="utf-8"></script>
+	<script src="acegwtdemo/ace/ext-language_tools.js" type="text/javascript" charset="utf-8"></script>
   </head>
 
   <!--                                           -->
